# Ad-astra.Made.Not-said

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _9T.cpp  demo_graphing.cpp  song.cpp
AUTO-A113/OSp/: CMakeLists.txt
AUTO-A113/OSp/src/: IO_sockets.cpp  core.cpp  hyper_net.cpp  petri_net.cpp  render3.cpp
IXN/: CMakeLists.txt  README.md
IXN/Fondle/: README.md  fdl-artmet.cpp  fdl-audio.cpp  fdl-bluetooth.cpp  fdl-comms.cpp  fdl-endec.cpp  fdl-file-manip.cpp  fdl-gg-clust2.cpp  fdl-gg-ray-x.cpp  fdl-gg.cpp  fdl-hyper-vector.cpp  fdl-surface.cpp
IXN/Fondle/Assets/: alph.clst2
IXN/Include/: CMakeLists.txt
IXN/Include/IXN/: artmet.hpp  assert.hpp  audio.hpp  base-components.hpp.in  bit_utils.hpp  comms.hpp  concepts.hpp  descriptor.hpp.in  endec.hpp  env.hpp  file-manip.hpp  geomet.hpp  hyper-vector.hpp  init.hpp  network.hpp  os.hpp  render2.hpp  render3.hpp  stl-helper.hpp  surface.hpp  tempo.hpp  utility-helper.hpp
IXN/Include/IXN/Device/: barracuda-ctrl-nln-driver.hpp  barracuda-nln-driver.hpp
IXN/Include/IXN/Framework/: imgui-opengl3.hpp  imgui_on_opengl3.hpp  threads_follow.hpp
IXN/Labs/: CMakeLists.txt
IXN/Labs/Brute_pass/: CMakeLists.txt  main.cpp
IXN/Labs/DCS-1/: CMakeLists.txt  main_1.cpp
IXN/Labs/Hamming/: CMakeLists.txt  main.cpp
IXN/Labs/II-2/: CMakeLists.txt  main.cpp
IXN/Labs/RTS-4/: CMakeLists.txt  main.cpp  main_test_2.cpp  main_test_3.cpp
IXN/Labs/Square-racers/: CMakeLists.txt  main.cpp
IXN/Ruptures/: .gitignore  CMakeLists.txt
IXN/Ruptures/BarraCUDA-CTRL-tester/: CMakeLists.txt  main-v2.cpp  main.cpp
IXN/Ruptures/BarraCUDA-CTRL-tester/Mesh/: BarraCUDA.vert
IXN/Ruptures/BarraCUDA-tester/: main-v2.cpp
IXN/Ruptures/BarraCUDA-tester/Mesh/: BarraCUDA.mtl
IXN/Ruptures/BarrunCUDA-tester/: CMakeLists.txt  main-v2.cpp  main.cpp
IXN/Ruptures/BarrunCUDA-tester/Mesh/: BarraCUDA.frag
IXN/Ruptures/Blur-tool/: CMakeLists.txt  main.cpp
IXN/Ruptures/Cvt-a2b-geom-2-clust2/: CMakeLists.txt  main.cpp
IXN/Ruptures/RGBA-interlace/: CMakeLists.txt
IXN/Ruptures/barcutza/: CMakeLists.txt  main.cpp
IXN/Ruptures/bitmap-fondle/: CMakeLists.txt  main.cpp  main_bit.cpp
IXN/Ruptures/envctl/: CMakeLists.txt  main.cpp
IXN/Ruptures/warc/: CMakeLists.txt  README.md
IXN/Ruptures/warc/data/: n2yo_past_data_33591.json
IXN/Ruptures/warc/imm/: common.glsl
IXN/Ruptures/warc/soft/: astro.cpp  database.cpp  db_main.cpp  dev.cpp  earth-imm.cpp  inet-tls.cpp  n2yo.cpp  warc-main.cpp
IXN/Source/: CMakeLists.txt  audio.cpp  comms.cpp  os.cpp  render2.cpp  render3.cpp  surface.cpp
IXN/Templates/: .file-template.cpp  .file-template.hpp
IXT/: .gitignore  .json  CMakeLists.txt  Doxyfile  README.md  bit_manip.hpp  comms.hpp  concepts.hpp  console.hpp  descriptor.hpp  endec.hpp  file_manip.hpp  os.cpp  os.hpp
IXT/Assembles/: CMakeLists.txt
IXT/Assembles/Blur-tool/: CMakeLists.txt  main.cpp
IXT/Assembles/IXT-cvt-alpha-2-bravo/: CMakeLists.txt
IXT/Assembles/IXT-cvt-alpha-2-bravo/Geom-2-Clust2/: CMakeLists.txt  main.cpp
IXT/CMake/: IXTDescriptor.cmake
IXT/Fondle/: fdl-artmet.cpp  fdl-audio.cpp  fdl-bluetooth.cpp  fdl-comms.cpp  fdl-endec.cpp  fdl-file-manip.cpp  fdl-gg-clust2.cpp  fdl-gg-ray-x.cpp  fdl-gg.cpp  fdl-hyper-vector.cpp  fdl-lab-1-gg3.cpp  fdl-lab-2-gg3.cpp  fdl-surface.cpp  fdl-volatile-ptr.cpp  fdl_audio.cpp  fdl_comms.cpp  fdl_endec.cpp  fdl_gg.cpp  fdl_surface.cpp
IXT/Fondle/Assets/: alpha.geom  trig_ech.clst2
IXT/Include/: CMakeLists.txt  bit_manip.hpp  concepts.hpp  descriptor.hpp  endec.hpp  file_manip.hpp  os.hpp
IXT/Include/IXT/: _file_template.hpp  aritm.hpp  artmet.hpp  audio.hpp  bit_manip.hpp  comms.hpp  concepts.hpp  descriptor.hpp  descriptor.hpp.in  endec.hpp  env.hpp  file-manip.hpp  file_manip.hpp  hyper-vector.hpp  init.hpp  os.hpp  render2.hpp  render3.hpp  ring-0.hpp.in  stl-helper.hpp  surface.hpp  tempo.hpp  utility-helper.hpp  volatile-ptr.hpp  volatile_ptr.hpp
IXT/Labs/: CMakeLists.txt
IXT/Labs/Lab-III/: CMakeLists.txt  main.cpp
IXT/Labs/Lab-IV/: CMakeLists.txt  main.cpp
IXT/Labs/Lab-IV/shaders/: shader.frag  (+1 more)
IXT/Labs/Lab-V/: CMakeLists.txt  main.cpp
IXT/Labs/Lab-VI/: CMakeLists.txt  Model3D.cpp  Model3D.hpp  _main.cpp  main.cpp
IXT/Prototypes/: CMakeLists.txt
IXT/Ruptures/: CMakeLists.txt
IXT/Ruptures/BarraCUDA-CTRL-tester/: CMakeLists.txt  main.cpp
IXT/Ruptures/Cvt-a2b-geom-2-clust2/: CMakeLists.txt
IXT/Ruptures/NGS-HU/: CMakeLists.txt
IXT/Ruptures/RGBA-interlace/: CMakeLists.txt  main.cpp
IXT/Ruptures/Winter-Arc/: CMakeLists.txt  README.md
IXT/Ruptures/Winter-HU/: CMakeLists.txt
IXT/Ruptures/warc/: CMakeLists.txt  README.md
IXT/Source/: CMakeLists.txt  _file_template.cpp  audio.cpp  comms.cpp  os.cpp  render2.cpp  render3.cpp  surface.cpp
NLN/: CMakeLists.txt  README.md
NLN/Fondle/: fdl-artmet.cpp  fdl-audio.cpp  fdl-bluetooth.cpp  fdl-comms.cpp  fdl-endec.cpp  fdl-file-manip.cpp  fdl-gg-clust2.cpp  fdl-gg-ray-x.cpp  fdl-gg.cpp  fdl-hyper-vector.cpp  fdl-main.cpp  fdl-surface.cpp
NLN/Include/: CMakeLists.txt
NLN/Include/NLN/: .file-template.hpp  artmet.hpp  assert.hpp  audio.hpp  base-components.hpp.in  bit-manip.hpp  bit_utils.hpp  comms.hpp  concepts.hpp  descriptor.hpp.in  endec.hpp  env.hpp  file-manip.hpp  geomet.hpp  hyper-vector.hpp  init.hpp  network.hpp  os.hpp  render2.hpp  render3.hpp  stl-helper.hpp  surface.hpp  tempo.hpp  utility-helper.hpp
NLN/Labs/: CMakeLists.txt
NLN/Labs/II-2/: CMakeLists.txt  main.cpp
NLN/Labs/Square-racers/: main.cpp
NLN/Ruptures/: CMakeLists.txt
NLN/Ruptures/BarraCUDA-CTRL-tester/: CMakeLists.txt  main-v2.cpp  main.cpp
NLN/Ruptures/Blur-tool/: CMakeLists.txt  main.cpp
NLN/Ruptures/Cvt-a2b-geom-2-clust2/: CMakeLists.txt  main.cpp
NLN/Ruptures/RGBA-interlace/: CMakeLists.txt  main.cpp
NLN/Ruptures/Square-racers/: CMakeLists.txt  main.cpp  square-racers-imgui.hpp
NLN/Ruptures/warc/: CMakeLists.txt  README.md
NLN/Source/: CMakeLists.txt  _file-template.cpp  audio.cpp  comms.cpp  os.cpp  render2.cpp  render3.cpp  surface.cpp
NLN/Templates/: .file-template.cpp  .file-template.hpp  nln-imgui-glfw.cpp
(+313 files in other folders)
